--- a/.github/workflow/test.yaml
+++ b/.github/workflow/test.yaml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo
-        run: echo 'aaa bbb cc ddd c'
+        run: echo 'aaa bbb cc dd ddd c'
 
