--- a/.github/workflow/test.yaml
+++ b/.github/workflow/test.yaml
@@ -1,4 +1,4 @@
-name: test
+name: abcdefg
 on:
   push:
     branches:
@@ -7,6 +7,5 @@ jobs:
   client-test:
     runs-on: ubuntu-latest
     steps:
-      - name: echo
-        run: echo 'aaa bbb cc dd ddd c'
+      - run: echo 'aaa bbb cc dd ddd c'
 
